regression_tests/snap/check/teststm7/teststm7.err
================================================================================

                      PROGRAM SNAP  Version 2.7.11-f8310fa

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 20 2018 14:32:45

================================================================================
                     Run at 20-AUG-2018 14:37:42 by ccrook




================================================================================
                                                            20-AUG-2018 14:37:42

                                 ERROR SUMMARY

================================================================================

Error: Networks to merge have incompatible coordinate systems

Error: Errors encountered reading coordinate file
       Line 4: File teststm7.snp

Error: The command file is not correct
