regression_tests/snap/check/teststm7/teststm7.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.11-f8310fa

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 20 2018 14:32:45

================================================================================
                     Run at 20-AUG-2018 14:37:42 by ccrook




================================================================================
Regression tests - multiple coordinate files                20-AUG-2018 14:37:42

                                     ERRORS

================================================================================

Note: 3 errors reported in teststm7.err
